cluster-config/cilium/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-gateway-class
spec:
  controllerName: "cilium.io/gateway"
  controller: "cilium.io/gateway"
