cluster-config/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: ingress
spec:
  gatewayClassName: cilium
  listeners:
  - name: http-listener
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https-listener
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough      
    allowedRoutes:
      namespaces:
        from: All
